Clean-uy micronaut config